<resources>
    <string name="app_name">QuadTech</string>
    <string name="Welcome">Welcome to QuadTech Diary!</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="Login_Form">Login Form</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="SignUp_Now">Don\'t have an account? <b><font color="#F7C8E0">Sign up</font></b></string>
    <string name="FirstName">First Name</string>
    <string name="MiddleName">Middle Name</string>
    <string name="LastName">Last Name</string>
    <string name="ConfirmPass">Confirm Password</string>
    <string name="Cancel">Cancel</string>
    <string name="SignUpForm">Sign Up Form</string>
    <string name="Proceed">Proceed</string>
    <string name="Review_Info">Review Info Form</string>
    <string name="CJ">Christian Molina</string>
    <string name="Luther">Luther Sambeli</string>
    <string name="Ping">Ping-Wei Chen</string>
    <string name="Kirk">Kirk Tan</string>
    <string name="Developers">Meet the Developers</string>
    <string name="QuadTech">QuadTech</string>
    <string name="SmallAdd">+ Add</string>
    <string name="BigAdd">Add Diary Entry</string>
    <string name="Back">Back</string>
    <string name="Developers2">Developers Page</string>
    <string name="Logout">Logout</string>
    <string name="personal_diary">My Personal Diary</string>
    <string name="Delete">Delete</string>
    <string name="addDiary">Add Diary</string>
    <string name="Dear_Diary">Dear Diary...</string>
    <string name="Diary_Title">Diary Title</string>
    <string name="Save_Diary">Save Diary</string>
</resources>